@@ -21,6 +21,15 @@ CONFIGURATION
 
     Example: PerlSetVar GallerCacheDir '/var/tmp/Apache-Gallery/'
 
+    GalleryAutoRotate
+        Some cameras, like the Canon G3, can detect the orientation of a the
+        pictures you take and will save this information in the
+        'Orientation' EXIF field. Apache::Gallery will then automaticly
+        rotate your images.
+
+        This behavior is default but can be disabled by setting
+        GalleryAutoRotate to 0.
+
     GalleryCacheDir
         Directory where Apache::Gallery should create its cache with scaled
         pictures. The default is /var/tmp/Apache-Gallery/ . Here a directory
@@ -92,7 +101,8 @@ FEATURES
 
         If your camera does not support this, you can rotate the images
         manually, This can also be used to override the rotate information
-        from a camera that supports that.
+        from a camera that supports that. You can also disable this behavior
+        with the GalleryAutoRotate option.
 
         To use this functionality you have to create file with the name of
         the picture you want rotated appened with ".rotate". The file should
